# lacoder

./: Cargo.toml
lapce-agent/: Cargo.toml
lapce-agent/src/: lib.rs  tools.rs  wire.rs
lapce-agent/src/provider/: anthropic.rs  mod.rs  openai.rs  stub.rs
lapce-agent/tests/: stub_smoke.rs
lapce-app/: Cargo.toml
lapce-app/src/: app.rs  id.rs  lib.rs  mode.rs  window.rs  window_tab.rs
lapce-app/src/agent/: assistant_engine.rs  assistant_view.rs  coder_view.rs  engine.rs  mod.rs  registry.rs  session.rs  stub_assistant.rs  stub_runner.rs
lapce-app/src/home/: mod.rs
lapce-app/src/launchpad/: footer.rs  mod.rs  tab_strip.rs  top_nav.rs  workspace_card.rs
lapce-scm/: Cargo.toml
lapce-scm/src/: github.rs  lib.rs  piper.rs  types.rs
lapce-scm/tests/: detect_smoke.rs
